Commiting improving the bengali agent and adding Gmail functionality

--- a/requirements.txt
+++ b/requirements.txt
@@ -4,3 +4,18 @@ psutil==5.9.5
 litellm==1.66.3
 google-generativeai==0.8.5
 python-dotenv==1.1.0
+
+
+google-api-core==2.22.0
+google-api-python-client==2.152.0
+google-auth==2.36.0
+google-auth-httplib2==0.2.0
+google-auth-oauthlib==1.2.1
+google-cloud-aiplatform==1.71.1
+google-cloud-bigquery==3.26.0
+google-cloud-core==2.4.1
+google-cloud-resource-manager==1.13.0
+google-cloud-storage==2.18.2
+google-crc32c==1.6.0
+google-resumable-media==2.7.2
+googleapis-common-protos==1.65.0
